# gtorrent-core

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG  CMakeLists.txt  Makefile.am  Makefile.in  README.md  README.rst  TODO.md  astylerc  configure  configure.ac  install.sh  spec.md
doc/: torrent.md
include/: all.h
include/gtorrent/: Config.hpp  Core.hpp  Event.hpp  Feed.hpp  FeedGroup.hpp  Log.hpp  Peer.hpp  Platform.hpp  Settings.hpp  Torrent.hpp  Utils.hpp  libtorrent.hpp
scripts/: addmagnet.sh  cpplint.sh  deps.sh  format.sh
src/: Application.cpp  Application.hpp  CMakeLists.txt  Core.cpp  Core.hpp  Event.hpp  Feed.cpp  FeedGroup.cpp  Log.cpp  Log.hpp  Peer.cpp  Platform_linux.cpp  Platform_win.cpp  Settings.cpp  StringHandler.cpp  Torrent.cpp  Torrent.hpp  all.h  main.cpp
src/core/: Core.cpp  Core.hpp  Event.hpp  Log.cpp  Log.hpp  Torrent.cpp  Torrent.hpp  libtorrent.hpp
src/gui/core/: Base.cpp  Base.hpp
src/gui/gtk/: Gtk.cpp  Gtk.hpp  GtkAddMagnetLinkWindow.cpp  GtkAddMagnetLinkWindow.hpp  GtkMainWindow.cpp  GtkMainWindow.hpp  GtkTorrentTreeView.cpp  GtkTorrentTreeView.hpp  GtkTreeTorrentView.cpp  GtkWindow.cpp  GtkWindow.hpp
src/lib/core/: Core.cpp  Core.hpp  Log.cpp  Log.hpp  OSHelper.cpp  OSHelper.hpp  Torrent.cpp  Torrent.hpp  TorrentEngine.cpp  TorrentEngine.hpp  libtorrent.hpp
src/lib/gui/core/: Base.cpp  Base.hpp  GuiBase.hpp
src/lib/gui/gtk/: Gtk.cpp  Gtk.hpp  GtkMainWindow.cpp  GtkMainWindow.hpp  GtkTorrentColumns.cpp  GtkTorrentColumns.hpp  GtkTorrentExplorerWindow.cpp  GtkTorrentExplorerWindow.hpp  GtkTorrentTreeView.hpp  GtkTreeTorrentView.cpp  GtkWindow.hpp
src/lib/shared/: Log.cpp  Log.hpp
src/utils/: Utils.cpp  Version.hpp.in
test/: .gitignore  Makefile  README.md  googletest.sh  main.cpp
